--- a/line-up/index.html
+++ b/line-up/index.html
@@ -56,15 +56,15 @@
     <div class="nav">
         <div>
             <div style="flex-grow: 1">
-                <h1><a href="/">🧮</a></h1>
+                <h1><a href="..">🧮</a></h1>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
                     <li>
-                        <a href="/league/">리그</a>
+                        <a href="../league/">리그</a>
                     </li>
                     <li>
-                        <a href="/line-up/" select="true">타선 기반</a>
+                        <a href="../line-up/" select="true">타선 기반</a>
                     </li>
                 </ul>
             </div>
@@ -170,7 +170,7 @@
         <hr>
 
         <div class="content" style="text-align: center;">
-            <runner-input id="runner-input" class="scrolled-content" src="/template/runner-input.html">
+            <runner-input id="runner-input" class="scrolled-content" src="../template/runner-input.html">
             </runner-input>
         </div>
         </div>
@@ -186,7 +186,7 @@
         <hr>
 
         <batter-input id="batter-input" class="content" inner-class="scrolled-content"
-            src="/template/batter-input.html">
+            src="../template/batter-input.html">
             <div>
                 <input class="player-name" type="text" value="batter" />
                 <button class="save-csv">저장</button>
