--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav">
         <div>
             <div style="flex-grow: 1">
-                <h1><a href="/" select="true">🧮</a></h1>
+                <h1><a href="./" select="true">🧮</a></h1>
             </div>
             <button type="button" class="hamburger-button" data-toggle="collapse"
                 data-target="#bs-example-navbar-collapse-1" style="display:none;">
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
                     <li>
-                        <a href="/league/">리그</a>
+                        <a href="./league/">리그</a>
                     </li>
                     <li>
-                        <a href="/line-up/">타선 기반</a>
+                        <a href="./line-up/">타선 기반</a>
                     </li>
                 </ul>
             </div>
