--- a/league/index.html
+++ b/league/index.html
@@ -18,6 +18,7 @@
     <script src="../src/easy-h/module/import-html.js" type="module"></script>
     <script src="../src/easy-h/ui/bottom-sheet.js" type="module"></script>
     <script src="../src/markdown.js"></script>
+    <script src="../src/common.js"></script>
     <script src="./input.js" type="module" defer></script>
     <style>
         .input-form {
@@ -41,10 +42,10 @@
 
 <body>
 
-    <div class="nav">
+    <nav>
         <div>
             <div style="flex-grow: 1">
-                <h1><a href="../">🧮</a></h1>
+                <h1><a href="../">Sit-Val</a></h1>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
@@ -57,7 +58,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
     </div>
     <div class="slider">
         <div class="container neumorphism">
