--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="/style/style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="/src/markdown.js"></script>
+    <script src="./src/markdown.js"></script>
+    <script src="./src/common.js"></script>
 </head>
 
 <body>
-    <div class="nav">
+    <nav>
         <div>
             <div style="flex-grow: 1">
-                <h1><a href="./" select="true">🧮</a></h1>
+                <h1><a href="./" select="true">Sit-Val</a></h1>
             </div>
             <button type="button" class="hamburger-button" data-toggle="collapse"
                 data-target="#bs-example-navbar-collapse-1" style="display:none;">
@@ -36,7 +37,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
     <div id="wrapper" style="padding-bottom: 10px;">
         <div class="container neumorphism markdown-container" data-markdown-file="./goal.md">
         </div>
