--- a/line-up/index.html
+++ b/line-up/index.html
@@ -16,6 +16,7 @@
     <script src="../src/re/input/batter-input-component.js" type="module"></script>
     <script src="../src/re/input/runner-input-component.js" type="module"></script>
     <script src="../src/markdown.js"></script>
+    <script src="../src/common.js"></script>
     <script src="./input.js" type="module" defer></script>
     <style>
         .input-form {
@@ -53,10 +54,10 @@
 </head>
 
 <body>
-    <div class="nav">
+    <nav>
         <div>
             <div style="flex-grow: 1">
-                <h1><a href="..">🧮</a></h1>
+                <h1><a href="..">Sit-Val</a></h1>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
@@ -69,7 +70,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
     <div class="slider">
         <div class="container neumorphism">
             <div style="display:flex; flex-wrap:nowrap;justify-content: center;overflow:auto">
