--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="container neumorphism markdown-container" data-markdown-file="./feature.md">
         </div>
-        <div class="container neumorphism markdown-container" data-markdown-file="/contact.md">
+        <div class="container neumorphism markdown-container" data-markdown-file="./contact.md">
         </div>
     </div>
 </body>
