다국어 지원

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="./style/style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./src/easy-h/lang/e-text-component.js" type="module"></script>
     <script src="./src/markdown.js"></script>
     <script src="./src/common.js"></script>
+
+    <e-text-set key="ko" src="./lang-src/kor.json"></e-text-set>
+    <e-text-set key="en" src="./lang-src/eng.json"></e-text-set>
 </head>
 
 <body>
@@ -29,10 +33,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
                     <li>
-                        <a href="./league/">리그</a>
+                        <a href="./league/"><e-text key="nav-league">리그</e-text></a>
                     </li>
                     <li>
-                        <a href="./line-up/">타선 기반</a>
+                        <a href="./line-up/"><e-text key="nav-lineup">타선 기반</e-text></a>
                     </li>
                 </ul>
             </div>
