--- a/league/index.html
+++ b/league/index.html
@@ -16,6 +16,7 @@
     <script src="../src/re/input/runner-input-component.js" type="module"></script>
 
     <script src="../src/easy-h/module/import-html.js" type="module"></script>
+    <script src="../src/easy-h/lang/e-text-component.js" type="module"></script>
     <script src="../src/easy-h/ui/bottom-sheet.js" type="module"></script>
     <script src="../src/easy-h/ui/pop-up.js" type="module"></script>
     <script src="../src/markdown.js"></script>
@@ -38,6 +39,8 @@
             margin-bottom: 0;
         }
     </style>
+    <e-text-set key="ko" src="../lang-src/kor.json"></e-text-set>
+    <e-text-set key="en" src="../lang-src/eng.json"></e-text-set>
 
 </head>
 
@@ -51,10 +54,14 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
                     <li>
-                        <a href="../league/" select="true">리그</a>
+                        <a href="../league/" select="true">
+                            <e-text key="nav-league">리그</e-text>
+                        </a>
                     </li>
                     <li>
-                        <a href="../line-up/">타선 기반</a>
+                        <a href="../line-up/">
+                            <e-text key="nav-lineup">타선 기반</e-text>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -74,11 +81,23 @@
         <div class="container neumorphism">
             <div style="display:flex; flex-wrap:nowrap;justify-content: center;overflow:auto">
                 <div style="display:flex; flex-wrap:nowrap;justify-content: left;flex-grow:1;">
-                    <button id="open-batter-league" style="text-wrap: nowrap">리그 타격 기록 설정</button>
-                    <button id="open-runner-league" style="text-wrap: nowrap">리그 주자 능력 설정</button>
+                    <button id="open-batter-league"
+                        style="text-wrap: nowrap">
+                        <e-text key="btn-input-batter-league">
+                            리그 타격 기록 설정
+                        </e-text>
+                    </button>
+                    <button id="open-runner-league"
+                        style="text-wrap: nowrap">
+                        <e-text key="btn-input-runner">
+                            리그 주자 능력 설정
+                        </e-text>
+                    </button>
                 </div>
                 <div>
-                    <button id="open-tool" style="text-wrap: nowrap">분석 도구</button>
+                    <button id="open-tool" style="text-wrap: nowrap">
+                        <e-text key="btn-tool">분석 도구</e-text>
+                    </button>
                 </div>
             </div>
         </div>
@@ -86,15 +105,23 @@
     </div>
     <bottom-sheet id="batter-personal" data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism">
-        <h1>개인 타격 기록</h1>
+        <h1>
+            <e-text key="input-batter-personal">
+                개인 타격 기록
+            </e-text>
+        </h1>
         <hr>
         <button class="close-btn">✕</button>
         <button class="toggle-btn">-</button>
         <batter-input class="content" inner-class="scrolled-content" src="../template/batter-input.html">
             <div>
-                <button class="save-csv">저장</button>
+                <button class="save-csv">
+                    <e-text key="btn-save">저장</e-text>
+                </button>
                 <input class='read-csv-file' type="file" accept=".csv" style="display:none;">
-                <button class="read-csv">불러오기</button>
+                <button class="read-csv">
+                    <e-text key="btn-load">불러오기</e-text>
+                </button>
 
             </div>
             <hr>
@@ -104,16 +131,24 @@
 
     <bottom-sheet data-state="max" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism" trigger-id="open-batter-league" open="open">
-        <h1>리그 타격 기록</h1>
+        <h1>
+            <e-text key="input-runner">
+                리그 타격 기록
+            </e-text>
+        </h1>
         <hr>
         <button class="close-btn">✕</button>
         <button class="toggle-btn">-</button>
         <batter-input id="batter-league" class="content" inner-class="scrolled-content"
             src="../template/batter-input.html">
             <div>
-                <button class="save-csv">저장</button>
+                <button class="save-csv">
+                    <e-text key="btn-save">저장</e-text>
+                </button>
                 <input class='read-csv-file' type="file" accept=".csv" style="display:none;">
-                <button class="read-csv">불러오기</button>
+                <button class="read-csv">
+                    <e-text key="btn-load">불러오기</e-text>
+                </button>
 
             </div>
             <hr>
@@ -122,7 +157,11 @@
     </bottom-sheet>
     <bottom-sheet data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism" trigger-id="open-runner-league">
-        <h1>리그 주자 능력</h1>
+        <h1>
+            <e-text key="input-runner">
+                리그 주자 능력
+            </e-text>
+        </h1>
         <button class="close-btn">✕</button>
         <button class="toggle-btn">-</button>
         <hr>
@@ -135,19 +174,42 @@
     </bottom-sheet>
     <pop-up id="tool-select" open="close" background-class="panel frostedglassmorphism"
         window-class="pop-up container neumorphism" trigger-id="open-tool">
-        <h1>분석 도구 추가</h1>
+        
+        <h1>
+            <e-text key="label-add-tool">분석 도구 추가</e-text>
+        </h1>
         <hr>
-        <button id="add-visualizer-personal">개인 확장 가치</button>
+        <button id="add-visualizer-personal">
+            <e-text key="btn-add-personal-extended-value">
+                개인 확장 가치
+            </e-text>
+        </button>
         <br>
-        <button id="add-visualizer-league">리그 확장 가치</button>
+        <button id="add-visualizer-league">
+            <e-text key="btn-add-league-extended-value">
+                리그 확장 가치
+            </e-text>
+        </button>
         <br>
-        <button id="add-visualizer-RE24">RE24</button>
+        <button id="add-visualizer-run-value">
+            <e-text key="btn-add-league-batted-ball-value">
+                리그 타구 가치
+            </e-text>
+        </button>
         <br>
-        <button id="add-visualizer-9RE">9이닝당 리그 기대 득점</button>
+        <button id="add-visualizer-RE24">
+            <e-text key="btn-add-re24">RE24</e-text>
+        </button>
         <br>
-        <button id="add-visualizer-run-value">리그 타구 가치</button>
+        <button id="add-visualizer-9RE">
+            <e-text key="btn-add-league-expected-runs-per-9-innings">
+                9이닝당 리그 기대 득점
+            </e-text>
+        </button>
         <hr>
-        <button class="close-btn">닫기</button>
+        <button class="close-btn">
+            <e-text key="btn-close">닫기</e-text>
+        </button>
 
     </pop-up>
 
