--- a/line-up/index.html
+++ b/line-up/index.html
@@ -11,9 +11,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/14.8.1/math.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/10.4.3/decimal.js"></script>
+
     <script src="../src/easy-h/module/import-html.js" type="module"></script>
     <script src="../src/easy-h/ui/bottom-sheet.js" type="module"></script>
     <script src="../src/easy-h/ui/pop-up.js" type="module"></script>
+    <script src="../src/easy-h/lang/e-text-component.js" type="module"></script>
+
     <script src="../src/re/input/batter-input-component.js" type="module"></script>
     <script src="../src/re/input/runner-input-component.js" type="module"></script>
     <script src="../src/markdown.js"></script>
@@ -51,6 +54,8 @@
             margin: 5px;
         }
     </style>
+    <e-text-set key="ko" src="../lang-src/kor.json"></e-text-set>
+    <e-text-set key="en" src="../lang-src/eng.json"></e-text-set>
 
 </head>
 
@@ -63,10 +68,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="flex-grow: 1">
                 <ul>
                     <li>
-                        <a href="../league/">리그</a>
+                        <a href="../league/"><e-text key="nav-league">리그</e-text></a>
                     </li>
                     <li>
-                        <a href="../line-up/" select="true">타선 기반</a>
+                        <a href="../line-up/" select="true"><e-text key="nav-lineup">타선 기반</e-text></a>
                     </li>
                 </ul>
             </div>
@@ -83,12 +88,27 @@
         <div class="container neumorphism">
             <div style="display:flex; flex-wrap:nowrap;justify-content: center;overflow:auto">
                 <div style="display:flex; flex-wrap:nowrap;justify-content: left;flex-grow:1;">
-                    <button id="open-line-up-input" style="text-wrap: nowrap">타선 편집</button>
-                    <button id="open-batter-list-input" style="text-wrap: nowrap">타자 관리</button>
-                    <button id="open-runner-league-input" style="text-wrap: nowrap">리그 주자 능력</button>
+                    <button id="open-line-up-input" style="text-wrap: nowrap">
+                        <e-text key="btn-lineup-setting">
+                            타선 설정
+                        </e-text>
+                    </button>
+                    <button id="open-batter-list-input" style="text-wrap: nowrap">
+                        <e-text key="btn-batter-setting">
+                            타자 관리
+                        </e-text>
+                    </button>
+
+                    <button id="open-runner-league" style="text-wrap: nowrap">
+                        <e-text key="btn-input-runner">
+                            리그 주자 능력 설정
+                        </e-text>
+                    </button>
                 </div>
                 <div>
-                    <button id="open-tool" style="text-wrap: nowrap">분석 도구</button>
+                    <button id="open-tool" style="text-wrap: nowrap">
+                        <e-text key="btn-tool">분석 도구</e-text>
+                    </button>
                 </div>
 
             </div>
@@ -96,7 +116,11 @@
     </div>
     <bottom-sheet id="line-up-input" data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism" trigger-id="open-line-up-input" open="open">
-        <h1>타선</h1>
+        <h1>
+            <e-text key="label-lineup-setting">
+                타선 설정
+            </e-text>
+        </h1>
         <button class="close-btn">✕</button>
         <button class="toggle-btn">-</button>
         <hr>
@@ -115,7 +139,7 @@
     <bottom-sheet id="batter-list-input" data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism" trigger-id="open-batter-list-input" open="open">
         <div>
-            <h1>타자 능력 관리</h1>
+            <h1><e-text key="label-batter-setting">타자 능력</e-text></h1>
             <button class="toggle-btn">-</button>
             <button class="close-btn">✕</button>
         </div>
@@ -123,19 +147,27 @@
         <div class="content">
             <div>
                 <button id="save-csv">
-                    타자 리스트 저장
+                    <e-text key="btn-save-batter-list">
+                        타자 리스트 저장
+                    </e-text>
                 </button>
                 <input type="file" id="read-batter-csv" accept=".csv">
                 <label id="input-file" for="read-batter-csv">
-                    타자 리스트 불러오기
-                    </calcel>
+                    <e-text key="btn-load-batter-list">
+                        타자 리스트 불러오기
+                    </e-text>
+                </label>
             </div>
             <hr>
             <div id="players" class="scrolled-content">
             </div>
             <div style="margin-top:auto;">
                 <hr>
-                <button id="add-batter-btn">타자 추가</button>
+                <button id="add-batter-btn">
+                    <e-text key="btn-add-batter">
+                        타자 추가
+                    </e-text>
+                </button>
             </div>
         </div>
         <hr>
@@ -158,7 +190,9 @@
 
     <bottom-sheet id="batter-pop-up" data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism">
-        <h1>타자 정보 편집</h1>
+        <h1><e-text key="input-batter-personal">
+                개인 타격 기록
+            </e-text></h1>
         <button class="toggle-btn">-</button>
         <button class="close-btn">✕</button>
 
@@ -167,10 +201,14 @@
         <batter-input id="batter-input" class="content" inner-class="scrolled-content"
             src="../template/batter-input.html">
             <div>
-                <input class="player-name" type="text" value="batter" />
-                <button class="save-csv">저장</button>
+                <button class="save-csv">
+                    <e-text key="btn-save">저장</e-text>
+                </button>
                 <input class='read-csv-file' type="file" accept=".csv" style="display:none;">
-                <button class="read-csv">불러오기</button>
+                <button class="read-csv">
+                    <e-text key="btn-load">불러오기</e-text>
+                </button>
+
             </div>
             <hr>
         </batter-input>
@@ -178,15 +216,27 @@
     </bottom-sheet>
     <pop-up id="tool-select" open="close" background-class="panel frostedglassmorphism"
         window-class="pop-up container neumorphism" trigger-id="open-tool">
-        <h1>분석 도구 추가</h1>
+        <h1>
+            <e-text key="label-add-tool">분석 도구 추가</e-text>
+        </h1>
         <hr>
-        <button id="add-visualizer-leadoff">리드오프</button>
+        <button id="add-visualizer-leadoff">
+            <e-text key="btn-add-leadoff">리드오프</e-text>
+        </button>
         <br>
-        <button id="add-visualizer-RE">RE24</button>
+        <button id="add-visualizer-RE">
+            <e-text key="btn-add-re24">RE24</e-text>
+        </button>
         <br>
-        <button id="add-visualizer-9RE">9이닝당 팀 기대 득점</button>
+        <button id="add-visualizer-9RE">
+            <e-text key="btn-add-team-expected-runs-per-9-innings">
+                9이닝당 팀 기대 득점
+            </e-text>
+        </button>
         <hr>
-        <button class="close-btn">닫기</button>
+        <button class="close-btn">
+            <e-text key="btn-close">닫기</e-text>
+        </button>
 
     </pop-up>
 </body>
