마르코프 엔진 분리 및 x점 득점 확률 계산 도구 추가

--- a/league/index.html
+++ b/league/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/10.4.3/decimal.js"></script>
 
-    <script src="../src/re/input/batter-input-component.js" type="module"></script>
-    <script src="../src/re/input/runner-input-component.js" type="module"></script>
+    <script src="../src/sit-val/input/batter-input-component.js" type="module"></script>
+    <script src="../src/sit-val/input/runner-input-component.js" type="module"></script>
 
     <script src="../src/easy-h/module/import-html.js" type="module"></script>
     <script src="../src/easy-h/lang/component.js" type="module"></script>
@@ -200,6 +200,13 @@
         <br>
         <button id="add-visualizer-RE24">
             <e-text key="btn-add-re24">RE24</e-text>
+        </button>
+        <button id="add-visualizer-RP24" style="display:none;">
+            <e-text key="btn-add-rp24">RP24</e-text>
+        </button>
+        <br>
+        <button id="add-visualizer-big-inning">
+            <e-text key="btn-add-big-inning">빅이닝</e-text>
         </button>
         <br>
         <button id="add-visualizer-9RE">
