라인업에 x 득점 확률 계산 기능 추가

--- a/line-up/index.html
+++ b/line-up/index.html
@@ -175,7 +175,11 @@
 
     <bottom-sheet data-state="close" background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism" trigger-id="open-runner-league">
-        <h1>주자 정보</h1>
+        <h1>
+            <e-text key="input-runner">
+                리그 주자 능력
+            </e-text>
+        </h1>
         <button class="toggle-btn">-</button>
         <button class="close-btn">✕</button>
         <hr>
@@ -230,6 +234,12 @@
         <br>
         <button id="add-visualizer-RE">
             <e-text key="btn-add-re24">RE24</e-text>
+        </button>
+        <br>
+        <button id="add-visualizer-big-inning">
+            <e-text key="btn-add-big-inning">
+                빅이닝
+            </e-text>
         </button>
         <br>
         <button id="add-visualizer-9RE">
