--- a/league/index.html
+++ b/league/index.html
@@ -104,7 +104,8 @@
         </div>
     </div>
     </div>
-    <bottom-sheet id="batter-personal" data-state="close" background-class="panel frostedglassmorphism"
+    <bottom-sheet id="batter-personal" data-state="close" 
+        background-class="panel frostedglassmorphism"
         window-class="toggle container neumorphism">
         <h1>
             <e-text key="input-batter-personal">
@@ -140,7 +141,8 @@
         <hr>
         <button class="close-btn">✕</button>
         <button class="toggle-btn">-</button>
-        <batter-input id="batter-league" class="content" inner-class="scrolled-content"
+        <batter-input id="batter-league" class="content"
+            inner-class="scrolled-content"
             src="../template/batter-input.html">
             <div>
                 <button class="save-csv">
